# libcrust

./: .gitignore  README.md  meson.build
.github/workflows/: ci.yaml
include/: Types.h  cdefs.h  types.h
include/crust/std/: Arc.h  Box.h  Option.h  Rc.h  Result.h
src/: meson.build
src/std/: Arc.c  Box.c  Option.c  Rc.c  Result.c
test/: meson.build  test_arc.cpp  test_box.cpp  test_option.cpp  test_rc.cpp  test_result.cpp
